# llguidance

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  SUPPORT.md  implementation.md  pyproject.toml  special_tokens.md
.github/workflows/: python.yml  rust.yml  wheels.yml
c_sample/: Makefile  README.md  c_sample.cpp
controllers/aici_native/: Cargo.toml
core/src/: bytes.rs  lib.rs  svob.rs  toktree.rs
docs/: optimizations.md  special_tokens.md  toktrie.md
hf_tokenizers/: Cargo.toml
hf_tokenizers/src/: lib.rs
json_stats/: Cargo.toml  genexample.py  gennegative.py  jstats.sh  process_tests.py  run.sh  token_stats.py  xgr_test.py
json_stats/scripts/: README.md  add_reasons.py  add_tests.py  gen_tests_with_llm.py  json_to_unique_tests.py  process_negatives.py  process_output.py  reorder.py  unique_tests_to_json.py  view.py  xgr_multi.py  xgr_process.py
json_stats/scripts/xgr/: xgr_test.py
json_stats/src/: json_stats.rs  lib.rs  stats.rs
parser/: Cargo.toml  README.md  build.rs  llguidance.h
parser/src/: api.rs  constraint.rs  factory.rs  ffi.rs  ffi_par.rs  grammar_builder.rs  json.rs  json_validation.rs  lib.rs  logging.rs  output.rs  panic_utils.rs  slicer.rs  tokenizer_json.rs  tokenparser.rs
parser/src/earley/: from_guidance.rs  grammar.rs  lark.rs  lexer.rs  lexerspec.rs  mod.rs  parser.rs  regexvec.rs  slicer.rs
parser/src/json/: README.md  compiler.rs  formats.rs  mod.rs  normalize.rs  numeric.rs  schema.rs  substring.rs
parser/src/json/numeric/: mod.rs  multiple.rs  range.rs
parser/src/lark/: README.md  ast.rs  compiler.rs  lexer.rs  mod.rs  parser.rs
py/: Cargo.toml
py/rust/: py.rs
python/: Cargo.toml
python/llguidance/: __init__.py  _lib.pyi  _util.py
python/rust/: py.rs
python_ext/: Cargo.toml
python_ext/src/: py.rs
rust/: Cargo.toml
rust/src/: py.rs
sample_parser/: Cargo.toml  README.md  gtest.sh  jsonschema.sh  lark.sh  run.sh
sample_parser/data/: blog.schema.ll.json  lark.lark  rfc.lark  rfc.xml
sample_parser/src/: grammar_tester.rs  json_schema_testsuite.rs  lark_test.rs  lib.rs  minimal.rs  sample_parser.rs  schema_tester.rs
sample_parser/tests/: test_ll.rs
scripts/: annotate_asm.js  bump.py  disasm.sh  gen-testcase.py  git-version.sh  install-deps.sh  jsonschema-stats.js  remote-guidance-test.sh  rust-size.js  test-guidance.sh  update-git.py
src/llguidance/: _lib.pyi
toktrie/: Cargo.toml  README.md
toktrie/src/: bytes.rs  svob.rs  toktree.rs
toktrie_hf_tokenizers/: Cargo.toml
toktrie_hf_tokenizers/src/: lib.rs
