[workspace]
members = [
    "python_ext",
    "parser",
    "sample_parser",
    "json_stats",
    "toktrie",
    "toktrie_hf_tokenizers",
]
# just exclude python_ext since it doesn't build without maturin
default-members = [
    "parser",
    "sample_parser",
    "json_stats",
    "toktrie",
    "toktrie_hf_tokenizers",
]
resolver = "2"

[profile.release]
# debug = 1
# lto = "thin"
# codegen-units = 1

# [patch.'https://github.com/microsoft/derivre']
# derivre = { path = "../derivre" }

[workspace.dependencies]
toktrie = { path = "toktrie" }
llguidance = { path = "parser" }
toktrie_hf_tokenizers = { path = "toktrie_hf_tokenizers" }
