[build-system]
requires = ["setuptools==68", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "llguidance"
version = "0.1.2"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages]
find = { where = ["python"], include = ["llguidance"] }

[[tool.setuptools-rust.ext-modules]]
target = "llguidance._lib"
binding = "PyO3"
debug = false
path = "python/Cargo.toml"
# features = ["llguidance_parser/logging"]
# See reference for RustExtension in https://setuptools-rust.readthedocs.io/en/latest/reference.html
