[package]
name = "llguidance_parser"
version = "0.3.0"
edition = "2021"

[dependencies]
toktrie = { git = "https://github.com/microsoft/toktrie", rev = "6172936f8c965d2050a53d14de0e3410ecc78ad1" }
derivre = { git = "https://github.com/microsoft/derivre", rev = "02ee497e6e404a0b402b4f68a9abf599d22ed2ed" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
anyhow = "1.0.90"
rustc-hash = "2.0.0"
instant = "0.1.13"
jsonschema = { version = "0.24.0", default-features = false }
url = "2.5.2"
lazy_static = "1.5.0"
regex-syntax = "0.8.5"

[features]
default = []
logging = []

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.27.0"
