[package]
name = "llguidance"
version = "0.5.0"
edition = "2021"

[dependencies]
toktrie = { workspace = true }
derivre = { git = "https://github.com/microsoft/derivre", rev = "8a7e7224869e12b0bf316db29b9c5a3c8fae761c" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
anyhow = "1.0.90"
instant = "0.1.13"
jsonschema = { version = "0.24.0", default-features = false, optional = true }
url = "2.5.2"
lazy_static = { version = "1.5.0", optional = true }
regex-syntax = "0.8.5"
indexmap = "2.6.0"
referencing = "0.26.1"
rayon = { version = "1.10.0", optional = true }
hashbrown = { version = "0.15.2", features = ["serde"] }

[features]
default = ["jsonschema_validation", "lark", "rayon"]
logging = []                                                  # this is extensive debug logging
lark = []                                                     # ~115k (binary)
jsonschema_validation = ["dep:jsonschema", "dep:lazy_static"] # ~2.5M (binary)
rayon = ["dep:rayon"]

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
regex = "1.11.1"
