[package]
name = "llguidance"
version = "0.1.2"
edition = "2021"

[dependencies]
llguidance_parser = { path = "../parser" }
bytemuck = "1.16.0"
pyo3 = "0.21.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"
crate-type = ["cdylib"]
path = "rust/lib.rs"
