[package]
name = "llguidance_py"
version = "0.5.1"
edition = "2021"

[dependencies]
llguidance = { workspace = true }
bytemuck = "1.19.0"
pyo3 = {version = "0.21.2", features = ["extension-module", "abi3-py39"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"
