[package]
name = "sample_parser"
version = "0.1.0"
edition = "2021"
default-run = "sample_parser"

[dependencies]
llguidance_parser = { path = "../parser" }
toktrie_hf_tokenizers = { git = "https://github.com/microsoft/toktrie", rev = "cbdd3d717e2d1671a326d68f74d5054a5a79c0c9" }
serde_json = "1.0.128"
anyhow = "1.0.87"
lazy_static = "1.5.0"

[[bin]]
name = "sample_parser"
path = "src/sample_parser.rs"

[[bin]]
name = "schema_tester"
path = "src/schema_tester.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "lark_test"
path = "src/lark_test.rs"

[[bin]]
name = "grammar_tester"
path = "src/grammar_tester.rs"
