[package]
name = "sample_parser"
version = "0.1.0"
edition = "2021"
default-run = "sample_parser"

[dependencies]
llguidance = { workspace = true }
toktrie_hf_tokenizers = { workspace = true }
serde_json = "1.0.128"
anyhow = "1.0.87"
lazy_static = "1.5.0"

[[bin]]
name = "sample_parser"
path = "src/sample_parser.rs"

[[bin]]
name = "schema_tester"
path = "src/schema_tester.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "lark_test"
path = "src/lark_test.rs"

[[bin]]
name = "grammar_tester"
path = "src/grammar_tester.rs"
