[package]
name = "sample_parser"
version = "0.1.0"
edition = "2021"
default-run = "sample_parser"

[dependencies]
llguidance = { workspace = true }
toktrie_hf_tokenizers = { workspace = true }
anyhow = "1.0.87"
lazy_static = "1.5.0"
serde_json = { version = "1.0.132", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }

[[bin]]
name = "sample_parser"
path = "src/sample_parser.rs"

[[bin]]
name = "json_schema_testsuite"
path = "src/json_schema_testsuite.rs"

[[bin]]
name = "schema_tester"
path = "src/schema_tester.rs"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "lark_test"
path = "src/lark_test.rs"

[[bin]]
name = "grammar_tester"
path = "src/grammar_tester.rs"
